# codex-gx

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  documentation.md  feature.md
.github/workflows/: ci.yml  daily-upgrade.yml  greeting.yml  release.yml  self-iterate.yml  sync-upstream.yml
.self-iterate/: README.md
apps/desktop/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.html
apps/desktop/src-tauri/: Cargo.toml  mcp.example.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: agent.rs  api_keys_tauri.rs  background_tauri.rs  bugreport_tauri.rs  context_compress_tauri.rs  cu_tool.rs  desktop_cua.rs  desktop_perm_tauri.rs  goal_tauri.rs  graph.rs  learning_tauri.rs  lib.rs  license_tauri.rs  lint_tauri.rs  local_tauri.rs  main.rs  marketplace_tauri.rs  mcp_tauri.rs  mcp_tool.rs  media_tauri.rs  mobile_tauri.rs  p2p_tauri.rs  personality_tauri.rs  pocket_tauri.rs  queue_tauri.rs  routing.rs  routing_tauri.rs  screenshot_tauri.rs  skills.rs  skills_md_tauri.rs  subagent_tool.rs  sync.rs  tools.rs  tts.rs  vault_tauri.rs  vision_tauri.rs  voice_tauri.rs  workspace_tauri.rs
apps/desktop/src/components/: ActivationGate.tsx  ApiKeysDialog.tsx  ApprovalDialog.tsx  BugReportDialog.tsx  CodeReviewDialog.tsx  Composer.tsx  DevicesPanel.tsx  FlowGraphView.tsx  LearningPanel.tsx  LicenseDialog.tsx  LicensePanel.tsx  LocalModelDialog.tsx  MarketplaceDialog.tsx  MessageBubble.tsx  PlanDialog.tsx  PluginPanel.tsx  ProjectContextMenu.tsx  ProjectTree.tsx  QueuePanel.tsx  ReplayDialog.tsx  RoutingEditorDialog.tsx  Sidebar.tsx  SkillsLibraryDialog.tsx  StageTimeline.tsx  StatusBar.tsx  SyncPanel.tsx  TeamPanel.tsx  ThemeStudioDialog.tsx  Thread.tsx  TopBar.tsx  TtsPanel.tsx
apps/desktop/src/e2e/: license.spec.ts  navigation.spec.ts  playwright.config.ts  settings.spec.ts  smoke.spec.ts  tauri-mock.ts
apps/desktop/src/i18n/: dicts.ts  en.ts  index.ts  types.ts  zh.ts
apps/desktop/src/lib/: chat.ts  chatHistory.ts  export.ts  formatRelativeTime.ts  providers.ts  redact.ts  slashCommands.ts
apps/desktop/src/stores/: locale.ts  sessions.ts  tabs.ts  theme.ts  users.ts  workspace.ts
apps/desktop/src/styles/: globals.css
apps/desktop/test-results/: .last-run.json
apps/desktop/test-results/src-e2e-license-Community-Free-Version-License-面板显示社区版信息/: error-context.md
apps/desktop/test-results/src-e2e-license-Community-Free-Version-应用直接启动，无激活阻塞/: error-context.md
apps/desktop/test-results/src-e2e-navigation-Navigat-56d67-raction-快捷键-Cmd-Ctrl-N-新建会话/: error-context.md
apps/desktop/test-results/src-e2e-navigation-Navigation-Interaction-主题切换按钮存在（如果有）/: error-context.md
apps/desktop/test-results/src-e2e-navigation-Navigation-Interaction-新会话按钮可点击/: error-context.md
apps/desktop/test-results/src-e2e-navigation-Navigation-Interaction-设置入口存在（如果有侧边栏图标）/: error-context.md
apps/desktop/test-results/src-e2e-navigation-Navigation-Interaction-键盘导航：Tab-可以在元素间移动/: error-context.md
apps/desktop/test-results/src-e2e-settings-Settings-API-Keys-API-Key-设置页面可打开/: error-context.md
apps/desktop/test-results/src-e2e-smoke-App-Launch-Core-UI-侧边栏可见/: error-context.md
configs/: config.example.toml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: config.rs  error.rs  lib.rs  message.rs  permission.rs  permission_config.rs  session.rs  tool.rs
crates/background/: Cargo.toml
crates/background/src/: lib.rs
crates/computer-use/: Cargo.toml
crates/computer-use/src/: action.rs  browser.rs  error.rs  lib.rs  repl.rs  schema.rs
crates/context/: Cargo.toml
crates/context/src/: agents_md.rs  compact.rs  file_search.rs  ide.rs  lib.rs  summary.rs
crates/desktop_perm/: Cargo.toml
crates/desktop_perm/src/: lib.rs
crates/goal/: Cargo.toml
crates/goal/src/: lib.rs
crates/headless/: Cargo.toml
crates/headless/src/: lib.rs
crates/learning/: Cargo.toml
crates/learning/src/: lib.rs
crates/license/: Cargo.toml
crates/license/src/: code.rs  lib.rs  manager.rs  provider.rs  storage.rs  verify.rs
crates/lint/: Cargo.toml
crates/lint/src/: lib.rs
crates/marketplace/: Cargo.toml
crates/marketplace/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  error.rs  jsonrpc.rs  lib.rs  message.rs  transport.rs
crates/mcp/src/transport/: http.rs  mod.rs  pool.rs  stdio.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/mobile_remote/: Cargo.toml
crates/mobile_remote/src/: http.rs  lib.rs  tunnel.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs
crates/patch/: Cargo.toml
crates/patch/src/: apply.rs  format.rs  lib.rs  parser.rs
crates/personality/: Cargo.toml
crates/personality/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/pocket/: Cargo.toml
crates/pocket/src/: http_server.rs  lib.rs
crates/provider/: Cargo.toml
crates/provider/src/: anthropic.rs  deepseek.rs  error.rs  lib.rs  local.rs  minimax.rs  minimax_media.rs  model.rs  openai_compat.rs  registry.rs  request.rs  response.rs  stream.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs  persist.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: command.rs  lib.rs  platform.rs  policy.rs
crates/screenshot/: Cargo.toml
crates/screenshot/src/: lib.rs
crates/skills_md/: Cargo.toml
crates/skills_md/src/: lib.rs
crates/vault/: Cargo.toml
crates/vault/src/: lib.rs
crates/vision/: Cargo.toml
crates/vision/src/: lib.rs
crates/voice/: Cargo.toml
crates/voice/src/: lib.rs
docs/: 开发文档.md
docs/assets/: preview.html
docs/skills/commit-message/: SKILL.md
docs/skills/grill-me/: SKILL.md
docs/skills/handoff/: SKILL.md
docs/skills/imagegen/: SKILL.md
docs/skills/openai-docs/: SKILL.md
docs/skills/pr-review/: SKILL.md
scripts/: fix-createdAt.mjs
(+6 files in other folders)
