[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell 核心：会话管理 / 消息 / Tool Registry"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
