[package]
name = "background"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell v1.8 Background Terminal — 后台 long-running 进程管理"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["full"] }
