[package]
name = "computer-use"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell Computer Use：浏览器层（Playwright JS REPL）+ 桌面层（CUA）"

[dependencies]
agent-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util", "macros"] }