[package]
name = "headless"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell v1.7 Headless / JSON 模式 (CI/CD 关键)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
agent-core = { path = "../agent-core" }
provider = { path = "../provider" }
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
