[package]
name = "license"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell License 激活码系统"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
base64.workspace = true
hmac.workspace = true

[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }
tempfile = "3"