[package]
name = "lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell v1.4 代码 review / 静态分析集成（clippy / tsc / TODO 扫描）"

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
regex-lite.workspace = true

[dev-dependencies]
tempdir = "0.3"
