[package]
name = "mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell MCP (Model Context Protocol) — JSON-RPC 2.0 over stdio/WS/UDS"

[dependencies]
agent-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util", "macros"] }