[package]
name = "memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell 跨会话长期记忆"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "3"