[package]
name = "p2p"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell v1.4 P2P 设备协同（同局域网，mDNS + TCP + pairing code）"

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true
rand = "0.8"
