[package]
name = "patch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell apply_patch (Codex 风格)"

[dependencies]
agent-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util", "macros"] }