[package]
name = "personality"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell v1.7 沟通风格 (Personality) — 3 档预设 + 自定义"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
dirs = "5"
