[package]
name = "pocket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell v1.9.2 Pocket — 消息 App 触发任务 (飞书/企微/钉钉/Slack)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
