[package]
name = "provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell LLM provider 适配（M3 / OpenAI / Anthropic / DeepSeek）"

[dependencies]
agent-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
async-stream = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util", "macros"] }
wiremock = "0.6"