[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell 沙箱：macOS seatbelt / Windows AppContainer / Linux namespace"

[dependencies]
agent-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Console",
] }