[package]
name = "agentshell-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell 桌面应用 (Tauri 2)"

[lib]
name = "agentshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
agent-core = { path = "../../../crates/agent-core" }
provider = { path = "../../../crates/provider" }
patch = { path = "../../../crates/patch" }
context = { path = "../../../crates/context" }
mcp = { path = "../../../crates/mcp" }
sandbox = { path = "../../../crates/sandbox" }
computer-use = { path = "../../../crates/computer-use" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
