[package]
name = "agentshell-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentShell 桌面应用 (Tauri 2)"

[lib]
name = "agentshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
agent-core = { path = "../../../crates/agent-core" }
provider = { path = "../../../crates/provider" }
patch = { path = "../../../crates/patch" }
context = { path = "../../../crates/context" }
mcp = { path = "../../../crates/mcp" }
anyhow.workspace = true
sandbox = { path = "../../../crates/sandbox" }
computer-use = { path = "../../../crates/computer-use" }
license = { path = "../../../crates/license" }
memory = { path = "../../../crates/memory" }
voice = { path = "../../../crates/voice" }
marketplace = { path = "../../../crates/marketplace" }
vault = { path = "../../../crates/vault" }
lint = { path = "../../../crates/lint" }
queue = { path = "../../../crates/queue" }
p2p = { path = "../../../crates/p2p" }
learning = { path = "../../../crates/learning" }
base64.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
chrono.workspace = true
reqwest.workspace = true
uuid.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
